[metadata]
name = pyarchive
summary = coarse tool to move targets to a type specific location
author = John van Zantvoort
author-email = john@vanzantvoort.org
license = MIT
home-page = https://github.com/jvzantvoort/pyarchive
description-file = README.md
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python

[entry_points]

[files]
packages =
    pyarchive

[extras]

[test]
addopts = tests

[pytest]
addopts =
    --cov pyarchive --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
